<?xml version="1.0" encoding="utf-8"?>
<android.support.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:boxedEdges="all">

        <TextView
            android:id="@+id/screenTimeout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:text="@string/screentimeout"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2sp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonOff"
                    style="@style/RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_off" />

                <RadioButton
                    android:id="@+id/radioButton30"
                    style="@style/RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8sp"
                    android:text="@string/_30" />

                <RadioButton
                    android:id="@+id/radioButton60"
                    style="@style/RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8sp"
                    android:text="@string/_60" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6sp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton120"
                    style="@style/RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_120" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    style="@style/RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8sp"
                    android:text="@string/_unlimited" />

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="4sp"
            android:text="@string/options"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="2sp">

            <ImageButton
                android:id="@+id/buttonWifi"
                style="@style/WifiButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/buttonBluetooth"
                style="@style/BluetoothButtonStyle"
                android:layout_marginLeft="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>
</android.support.wear.widget.BoxInsetLayout>